[project]
name = "YTGenericBrowser"
version = "2026.05.08"
description = "A generic browser extractor for yt-dlp, with support for Selenium and Playwright."
readme = "README.md"
license = { text = "UNLICENSED" }
dependencies = [
  "selenium>=4.35.0",
  "playwright>=1.58.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true
